<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Opciones</string>
    <string name="app_name">Buscador de películas</string>
    <string name="title_activity_movie_data">Datos de película</string>
    <string name="title_activity_movie_comments">Comentarios</string>
    <string name="movielist_connecting_text">Conectando…</string>
    <string name="movielist_search_button">Buscar</string>
    <string name="movielist_load_button">Cargar más peliculas</string>
    <string name="moviedata_fav">Favorito</string>
    <string name="moviedata_show_comments_button">Ver comentarios</string>
    <string name="moviecomments_commentHint">Escriba aquí su comentario</string>
    <string name="moviecomments_send_button">Enviar</string>
    <string name="title_activity_session_list">ipm2</string>
    <string name="title_activity_no_accounts">No hay cuentas disponibles</string>
    <string name="no_accounts">Entre en Ajustes/Cuentas para autenticar su cuenta.</string>
    <string name="ipm_accounts">Cuentas de IPM:</string>
    <string name="unable_auth_token">Incapaz de obtener la cookie.</string>
    <string name="account">Cuenta: </string>
    <string name="loading">Cargando…</string>
    <string name="no_more_pages">No hay más películas</string>
    <string name="user_tag">Última edición por:</string>
    <string name="email_tag">Email:</string>
    <string name="not_found">Error del servidor</string>
    <string name="searching">Buscando…</string>
    <string name="setting">Marcando…</string>
    <string name="done">Listo</string>
    <string name="commented"> comentó:</string>
    <string name="written">Escrito el</string>
    <string name="commentlist_load_button">Cargar más comentarios</string>
    <string name="no_more_comments">No hay más comentarios</string>
    <string name="sending">Enviando…</string>
    <string name="title_activity_comment_display">Mostrar comentario</string>
    <string name="delete_comment_button">Borrar comentario</string>
    <string name="not_author">No eres autor de este comentario</string>
    <string name="dialog_title">Borrar comentario</string>
    <string name="dialog_question">¿Seguro que quieres borrar el comentario? ¡No habrá vuelta atrás!</string>
    <string name="dialog_accept">Sí</string>
    <string name="dialog_cancel">No</string>

</resources>